test/compile-fail/resolution/use/nested-private-public-struct/top.rhdl
mod a {
    mod b {
        pub struct c {}
    }
}

use a::b::c;
